fixed tipsy z-index

--- a/missing_ballots/en/application.less
+++ b/missing_ballots/en/application.less
@@ -3325,7 +3325,7 @@ body {
 
 
 /****************************************************/
-.tipsy { font-size: 13px; font-family: breeserif_reg; position: absolute; padding: 5px; z-index: 100000; }
+.tipsy { font-size: 13px; font-family: breeserif_reg; position: absolute; padding: 5px; z-index: 9100000; }
 .tipsy-inner { background-color: #141414; color: #FFF; max-width: 250px; padding: 5px 8px 4px 8px; text-align: center; }
 
 /* Rounded corners */
